<resources>
    <string name="app_name">Dranking Quiz</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_question_selector">QuestionSelector</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_forfeit_selector">ForfeitSelector</string>
    <string name="player_entry_name">Name</string>
    <string name="player_entry_addplayer">Add Player</string>
    <string name="player_entry_startquestions">Start Questions</string>
    <string name="question_select_one">Question One</string>
    <string name="question_select_two">Question Two</string>
    <string name="question_select_three">Question Three</string>
    <string name="forfeit_next_person">Next Person</string>
    <string name="forfeit_title">Forfeit</string>
    <string name="question_drinks">Drinks</string>
    <string name="question_title">Question:</string>
    <string name="question_answer">Answer:</string>
    <string name="question_skip">Skip</string>
</resources>
