<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    tools:context="com.android.jamie.drinkinggame.PlayerEntry">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/inputName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:text="@string/player_entry_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/inputName" />

    <TextView
        android:id="@+id/txt_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/player_entry_error"
        android:visibility="gone"
        tools:text="@string/player_entry_error"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/button_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnNextPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin"
            android:layout_weight="1"
            android:text="@string/player_entry_addplayer" />

        <Button
            android:id="@+id/btnFinished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/player_entry_startquestions"
            tools:text="@string/player_entry_startquestions" />
    </LinearLayout>
</RelativeLayout>
